--- a/src/index.html
+++ b/src/index.html
@@ -36,9 +36,29 @@
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
-      <form class="popup__form" name="profile">
-        <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" required>
-        <input type="text" name="description" class="popup__input popup__input_type_description" placeholder="Занятие" required>
+      <form class="popup__form" name="profile" novalidate>
+        <input  type="text" 
+                name="name" 
+                id="popup__input_type_name" 
+                class="popup__input popup__input_type_name" 
+                placeholder="Имя" 
+                required 
+                minlength="2" 
+                maxlength="40"
+                pattern="^[a-zA-Zа-яА-ЯЁё \-]+$"
+                data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы">
+        <span class="popup__input_type_name-error popup__input-error">Вы пропустили это поле.</span> 
+        <input  type="text" 
+                name="description" 
+                id="popup__input_type_description" 
+                class="popup__input popup__input_type_description" 
+                placeholder="Занятие" 
+                required 
+                minlength="2" 
+                maxlength="200"
+                pattern="^[a-zA-Zа-яА-ЯЁё \-]+$"
+                data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы">
+        <span class="popup__input_type_description-error popup__input-error">Вы пропустили это поле.</span> 
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
@@ -47,9 +67,25 @@
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Новое место</h3>
-      <form class="popup__form" name="place">
-        <input type="text" name="place-name" class="popup__input popup__input_type_card-name" placeholder="Название" required>
-        <input type="url" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
+      <form class="popup__form" name="place" novalidate>
+        <input  type="text" 
+                name="place-name" 
+                id="popup__input_type_card-name" 
+                class="popup__input popup__input_type_card-name" 
+                placeholder="Название" 
+                required 
+                minlength="2" 
+                maxlength="30"
+                pattern="^[a-zA-Zа-яА-ЯЁё \-]+$"
+                data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы">
+        <span class="popup__input_type_card-name-error popup__input-error">Вы пропустили это поле.</span> 
+        <input  type="url" 
+                name="link" 
+                id="popup__input_type_url" 
+                class="popup__input popup__input_type_url" 
+                placeholder="Ссылка на картинку" 
+                required>
+        <span class="popup__input_type_url-error popup__input-error">Вы пропустили это поле.</span>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
