Готовая проектная работа. Добавлена валидация формы, работа с данными с сервера, возможность менять аватар профиля

--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,13 @@
   </header>
   <main class="content">
     <section class="profile page__section">
-      <div class="profile__image"></div>
+      <div class="profile__image">
+        <div class="profile__image-button"></div>
+      </div>
       <div class="profile__info">
-        <h1 class="profile__title">Жак-Ив Кусто</h1>
+        <h1 class="profile__title"></h1>
         <button class="profile__edit-button" type="button"></button>
-        <p class="profile__description">Исследователь океана</p>
+        <p class="profile__description"></p>
       </div>
       <button class="profile__add-button" type="button"></button>
     </section>
@@ -32,6 +34,22 @@
       © 2021 Mesto Russia
     </p>
   </footer>
+  <div class="popup popup_type_avatar">
+    <div class="popup__content">
+      <button type="button" class="popup__close"></button>
+      <h3 class="popup__title">Обновить аватар</h3>
+      <form class="popup__form" name="avatar" novalidate>
+        <input  type="url" 
+                name="avatar-link" 
+                id="popup__input_type_avatar-url" 
+                class="popup__input popup__input_type_avatar-url" 
+                placeholder="Ссылка на картинку" 
+                required>
+        <span class="popup__input_type_avatar-url-error popup__input-error">Вы пропустили это поле.</span> 
+        <button type="submit" class="button popup__button">Сохранить</button>
+      </form>
+    </div>
+  </div>
   <div class="popup popup_type_edit">
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
@@ -106,7 +124,10 @@
     <div class="card__description">
       <h2 class="card__title">
       </h2>
-      <button type="button" class="card__like-button"></button>
+      <div class="card__like-wrapper">
+        <button type="button" class="card__like-button"></button>
+        <span class="card__like-count"></span>
+      </div>
     </div>
   </li>
 </template>
